--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_webrtc: ^0.10.3
   socket_io_client: ^2.0.3+1
   flutter_bloc: ^8.1.5
   auto_route: ^7.8.4
+  firebase_auth: ^4.19.4
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
+  firebase_storage: ^11.7.4
+  dio: ^5.4.3+1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/font/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
