--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.7.4
   dio: ^5.4.3+1
   uuid: ^4.4.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  json_serializable: ^6.7.1
   build_runner: ^2.4.6
   auto_route_generator: ^7.3.2
 
