--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
   firebase_storage: ^11.7.4
+  image_picker: ^1.0.4
+  image_cropper: ^5.0.0
   dio: ^5.4.3+1
   uuid: ^4.4.0
   json_annotation: ^4.9.0
