--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.4.3+1
   uuid: ^4.4.0
   json_annotation: ^4.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
