--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   flutter_webrtc: ^0.10.3
-  socket_io_client: ^2.0.3+1
+  #socket_io_client: ^2.0.3+1
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
   auto_route: ^7.8.4
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
